--- a/Twitter API Connection.ipynb
+++ b/Twitter API Connection.ipynb
@@ -76,12 +76,12 @@
    "outputs": [],
    "source": [
     "# API KEY\n",
-    "api_key = \"fcJESZ5sIhOyJ36Gtb34xKOiI\"\n",
-    "api_key_secret = \"yLTe2IxT9csyRUl0FbdwlKy77AOXmpliIlYOxFnZB6aaslVLUv\"\n",
+    "api_key = \"AK\"\n",
+    "api_key_secret = \"AKS\"\n",
     "\n",
     "# Access Token\n",
-    "access_token = \"1442924034266521602-7zmGLoz2zrEfNL6ahTCYPSnVUlExyc\"\n",
-    "access_token_secret = \"3kfnme3pFiPfrRXlH6DuYFSByu0ZZqtWeZmJQHeBmqpac\""
+    "access_token = \"AT\"\n",
+    "access_token_secret = \"ATS\""
    ]
   },
   {
