--- a/Twitter API Connection.ipynb
+++ b/Twitter API Connection.ipynb
@@ -69,6 +69,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4be58506",
+   "metadata": {},
+   "source": [
+    "To set-up Twitter Developer Account\n",
+    "\n",
+    "Refer: https://github.com/khwajaavais/Twitter-Speech-Detection-Sentiment-Analysis/blob/main/Twitter%20Account%20Setup.md"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "698684aa",
